--- a/source/_posts/扁平化数组与树形结构的互相转换.md
+++ b/source/_posts/扁平化数组与树形结构的互相转换.md
@@ -7,6 +7,7 @@ categories: 算法
 top_img: https://cdn.jsdelivr.net/gh/L1atte/PicGo/img/香奈乎2.png
 cover: https://cdn.jsdelivr.net/gh/L1atte/PicGo/img/香奈乎2.png
 ---
+
 # 扁平化数组与树形结构的互相转换
 
 ## 写在前面
@@ -73,28 +74,71 @@ let tree = [
 /**
  * @description: 
  * @param {*} items 数组
- * @param {*} pid 父级id
+ * @param {*} rootId 根节点id
  * @return {*}
  */
-function array2tree(items,pid) {
+function array2tree(items,rootId) {
   let res = []
-  let getChildren = (res, pid) => {
+  let getChildren = (res, rootId) => {
     for(const i of items) {
-      if(i.pid === pid) {
+      if(i.pid === rootId) {
         const newItem = {...i, children: []}
         res.push(newItem)
         getChildren(newItem.children,newItem.id)
       }
     }
   }
-  getChildren(res, pid)
+  getChildren(res, rootId)
   return res
 }
 ```
 
-其实思路也很简单（正因为简单所以也是性能较差），首先传入数组items和父级ID，然后遍历数组，找到与父级ID相同的子节点，把子节点push到父节点的children数组里面。然后递归这个过程。。。
+其实思路也很简单，首先传入数组items和根节点ID，然后遍历数组，找到与根节点下的子节点，把子节点push到父节点的children数组里面。然后递归这个过程。。。
 
 显然，这个算法的时间复杂度为O(n^2)
 
-未完待续，后续为非递归方法和树形数据转换为数组的算法。
+### 非递归方式
+
+```javascript
+/**
+ * @description: 
+ * @param {*} items 数组
+ * @param {*} rootId 根节点id
+ * @return {*}
+ */
+function array2tree(items, rootId) {
+	const result = []; // 存放结果集
+	const map = {}; // 暂存数组以id为key的映射关系
+
+	// 先转成map存储
+	for (const item of items) {
+		map[item.id] = { ...item, children: [] };
+	}
+
+	for (const item of items) {
+		const id = item.id;
+		const pid = item.pid;
+		const treeItem = map[id];
+		if (pid === rootId) {
+			// 根节点
+			result.push(treeItem);
+		} else {
+			// 非根节点
+			if (!map[pid]) {
+				// 如果父节点不存在，则初始化父节点
+				map[pid] = {
+					children: [],
+				};
+			}
+			// 将节点push到对应父节点下
+			map[pid].children.push(treeItem);
+		}
+	}
+	return result;
+}
+```
+
+这里说一下思路，先把数组转成以id为key的映射关系。然后再遍历一次数组存入根节点，借助**对象的引用**，只需要更新map中的children即可。具体可看下面的流程图。
+
+显然，时间复杂度为O(n)
 
