1.完成文章(扁平化数组与树形结构的互相转换)

--- a/source/_posts/扁平化数组与树形结构的互相转换.md
+++ b/source/_posts/扁平化数组与树形结构的互相转换.md
@@ -1,13 +1,12 @@
 ---
 title: 扁平化数组与树形结构的互相转换
 date: 2021/9/14
-updated: 2021/9/14
+updated: 2021/9/16
 tags: 算法
 categories: 算法
 top_img: https://cdn.jsdelivr.net/gh/L1atte/PicGo/img/香奈乎2.png
 cover: https://cdn.jsdelivr.net/gh/L1atte/PicGo/img/香奈乎2.png
 ---
-
 # 扁平化数组与树形结构的互相转换
 
 ## 写在前面
@@ -22,12 +21,12 @@ cover: https://cdn.jsdelivr.net/gh/L1atte/PicGo/img/香奈乎2.png
 
 ```javascript
 let arr = [
- {id: 1, name: '1', pid: 0},
- {id: 2, name: '2', pid: 1},
- {id: 3, name: '3', pid: 1},
- {id: 4, name: '4', pid: 3},
- {id: 5, name: '5', pid: 3},
-]
+	{ id: 5, name: "5", pid: 4 },
+	{ id: 1, name: "1", pid: 0 },
+	{ id: 2, name: "2", pid: 1 },
+	{ id: 3, name: "3", pid: 1 },
+	{ id: 4, name: "4", pid: 3 },
+];
 ```
 
 ### 树形结构
@@ -54,7 +53,12 @@ let tree = [
                      "id": 4,
                      "name": "4",
                      "pid": 3,
-                     "children": []
+                     "children": [
+                         "id": 5,
+                         "name": "5",
+                         "pid": 4,
+                         "children": []
+                     ]
                    }
                 ]
             }
@@ -125,7 +129,7 @@ function array2tree(items, rootId) {
 		} else {
 			// 非根节点
 			if (!map[pid]) {
-				// 如果父节点不存在，则初始化父节点
+				// 如果父节点不存在，则初始化父节点(处理第一个节点不是根节点的情形)
 				map[pid] = {
 					children: [],
 				};
@@ -141,4 +145,60 @@ function array2tree(items, rootId) {
 这里说一下思路，先把数组转成以id为key的映射关系。然后再遍历一次数组存入根节点，借助**对象的引用**，只需要更新map中的children即可。具体可看下面的流程图。
 
 显然，时间复杂度为O(n)
+
+<img src="https://cdn.jsdelivr.net/gh/L1atte/PicGo/img/array2tree.png" />
+
+### 最佳性能
+
+```javascript
+/**
+ * @description: 
+ * @param {*} items 数组
+ * @param {*} rootId 根节点id
+ * @return {*}
+ */
+function array2tree(items, rootId) {
+	const res = []; // 存放结果集
+	const map = {}; //
+	for (const item of items) {
+		const id = item.id;
+		const pid = item.pid;
+
+		if (!map[id]) {
+			map[id] = {
+				children: [],
+			};
+		}
+		map[id] = {
+			...item,
+			children: map[id].children,
+		};
+		// 不可以像之前一样写成map[id] = {...item, children: [] }，因为节点有可能在找不到parent的时候存入map中
+
+		const treeItem = map[id];
+
+		if (pid === rootId) {
+			res.push(treeItem);
+		} else {
+			if (!map[pid]) {
+				map[pid] = {
+					children: [],
+				};
+			}
+			map[pid].children.push(treeItem);
+		}
+	}
+	return res;
+}
+```
+
+边做map存储，边找对应关系。
+
+显然，时间复杂度为O(n)。
+
+### 总结
+
+递归方式：每次递归寻找当前节点的子节点，并且需要重新遍历数组，时间复杂度为O(n^2)。
+
+非递归方式：利用对象的保存是引用这个特点，通过map保存节点及其子节点的信息，只需要将根节点存入数组，即可得到整个树形数据。时间复杂度是O(n)。
 
