1.增加文章TreeToArray部分

--- a/source/_posts/扁平化数组与树形结构的互相转换.md
+++ b/source/_posts/扁平化数组与树形结构的互相转换.md
@@ -17,8 +17,6 @@ cover: https://cdn.jsdelivr.net/gh/L1atte/PicGo/img/香奈乎2.png
 
 ### 扁平化数组：
 
-​	
-
 ```javascript
 let arr = [
 	{ id: 5, name: "5", pid: 4 },
@@ -142,7 +140,7 @@ function array2tree(items, rootId) {
 }
 ```
 
-这里说一下思路，先把数组转成以id为key的映射关系。然后再遍历一次数组存入根节点，借助**对象的引用**，只需要更新map中的children即可。具体可看下面的流程图。
+这里说一下思路，先把数组转成以id为key的映射关系。然后再遍历一次数组存入根节点，借助**对象的引用**，只需要更新map中的children即可。具体可看下面的流程图
 
 显然，时间复杂度为O(n)
 
@@ -192,13 +190,46 @@ function array2tree(items, rootId) {
 }
 ```
 
-边做map存储，边找对应关系。
+边做map存储，边找对应关系
 
-显然，时间复杂度为O(n)。
+显然，时间复杂度为O(n)
 
-### 总结
 
-递归方式：每次递归寻找当前节点的子节点，并且需要重新遍历数组，时间复杂度为O(n^2)。
 
-非递归方式：利用对象的保存是引用这个特点，通过map保存节点及其子节点的信息，只需要将根节点存入数组，即可得到整个树形数据。时间复杂度是O(n)。
+## 树形数据→扁平化数组(tree to array)
+
+### 递归实现
+
+```javascript
+/**
+ * @description: 
+ * @param {*} items 树形数据
+ * @return {*}
+ */
+function tree2arr(items) {
+	let res = []; // 存放结果集
+
+	items.forEach((item) => {
+    // children为字节点数组， node存放节点数据
+		const { children, ...node } = item;
+		res.push(node);
+		if (children && children.length) {
+			res = res.concat(tree2arr(children));
+		}
+	});
+	return res;
+}
+```
+
+遍历`tree`，每一项加进结果集，如果有`children`且长度不为0，则递归遍历
+
+显然时间复杂度为O(n^2)
+
+## 总结
+
+### Array To Tree
+
+递归方式：每次递归寻找当前节点的子节点，并且需要重新遍历数组，时间复杂度为O(n^2)
+
+非递归方式：利用对象的保存是引用这个特点，通过map保存节点及其子节点的信息，只需要将根节点存入数组，即可得到整个树形数据。时间复杂度是O(n)
 
