1.完成文章(跨域及其解决方案)

--- a/source/_posts/跨域及其解决方案.md
+++ b/source/_posts/跨域及其解决方案.md
@@ -1,18 +1,12 @@
 ---
 title: 跨域及其解决方案
 date: 2021/9/18
-updated: 2021/9/18
+updated: 2021/9/21
 tags: 浏览器
 categories: 浏览器
-top_img: https://cdn.jsdelivr.net/gh/L1atte/PicGo/img/香奈乎2.png
-cover: https://cdn.jsdelivr.net/gh/L1atte/PicGo/img/香奈乎2.png
+top_img: https://cdn.jsdelivr.net/gh/L1atte/PicGo/img/香奈乎4.jpg
+cover: https://cdn.jsdelivr.net/gh/L1atte/PicGo/img/香奈乎4.jpg
 ---
-
-## **2、解决跨域问题的三种思路**
-
-- **1、客户端浏览器解除跨域限制**（理论上可以但是不现实）
-- **2、发送 JSONP 请求替代 XHR 请求**（并不能适用所有的请求方式，不推荐）
-- **3、修改服务器端**（包括 HTTP 服务器和应用服务器）（**推荐**）
 
 # 跨域
 
@@ -22,7 +16,7 @@ cover: https://cdn.jsdelivr.net/gh/L1atte/PicGo/img/香奈乎2.png
 
 源 = 协议 + 域名 + 端口号
 
-![https://cdn.jsdelivr.net/gh/L1atte/PicGo/img/域名的组成.png]()
+![域名的组成](https://cdn.jsdelivr.net/gh/L1atte/PicGo/img/域名的组成.png)
 
 ## 同源策略做了什么？
 
@@ -42,7 +36,7 @@ cover: https://cdn.jsdelivr.net/gh/L1atte/PicGo/img/香奈乎2.png
 
 - CORS（跨域资源共享）
 
-- Node 正向代理
+- Node 中间件代理（两次跨域）
 
 - Nginx 反向代理
 
@@ -191,3 +185,139 @@ Origin http://api.bob.com is not allowed by Access-Control-Allow-Origin.
 ```
 
 一旦服务器通过了预检请求，以后每次浏览器正常的 CORS 请求，就都跟简单请求一样，会有一个 Origin 头信息字段。服务器的回应，也都会有一个`Access-Control-Allow-Origin`头信息字段。
+
+## Node中间件代理（两次跨域）
+
+### 实现原理
+
+同源策略是浏览器需要遵循的标准，而如果是**服务器向服务器**请求就无需遵循同源策略。代理服务器，需要做以下几个步骤：
+
+- 接受客户端请求
+- 将请求转发给服务器
+- 拿到服务器响应数据
+- 将响应转发给客户端
+
+![Node代理](https://cdn.jsdelivr.net/gh/L1atte/PicGo/img/Node代理.png)
+
+### cli 工具中的代理
+
+#### webpack
+
+在webpack中可以配置proxy来快速获得接口代理的能力
+
+```javascript
+const path = require("path");
+const HtmlWebpackPlugin = require("html-webpack-plugin");
+module.exports = {
+	entry: { index: "./index.js" },
+	output: { filename: "bundle.js", path: path.resolve(__dirname, "dist") },
+	devServer: {
+		port: 8000,
+		proxy: { "/api": { target: "http://localhost:8080" } },
+	},
+	plugins: [
+		new HtmlWebpackPlugin({ filename: "index.html", template: "webpack.html" }),
+	],
+};
+```
+
+#### Vue-cli 2.x
+
+设置`config/index.js`文件下的proxyTable配置
+
+```javascript
+// config/index.js
+proxyTable: {
+  '/api': {
+    target: 'http://xxxxxx.com', // 请求的接口的域名
+    secure: false,  // 如果是https接口，需要配置这个参数
+    ws: false, // 如果要代理websockets，需要配置这个参数
+    changeOrigin: true, // 如果接口跨域，需要进行这个参数配置
+    pathRewrite: {
+      '^/api': ''
+    }
+  }
+},
+//当你发起请求时前面加上'/api/'就代表着'http://xxxxxx.com'
+// 注意： '/api' 为匹配项，target 为被请求的地址，因为在 ajax 的 url 中加了前缀 '/api'，而原本的接口是没有这个前缀的，所以需要通过 pathRewrite 来重写地址，将前缀 '/api' 转为 '/'。如果本身的接口地址就有 '/api' 这种通用前缀，就可以把 pathRewrite 删掉。
+```
+
+
+
+#### Vue-cli 3.x
+
+在`Vue.config.js`下设置devServer的proxy
+
+```javascript
+module.exports = {
+	devServer: {
+		proxy: {
+			"/api": {
+				target: "http://www.example.org", // target host
+				changeOrigin: true, // needed for virtual hosted sites
+				ws: true, // proxy websockets
+				pathRewrite: {
+					"^/api/old-path": "/api/new-path", // rewrite path
+				},
+			},
+		},
+	},
+};
+```
+
+更多配置可以查阅[http-proxy-middleware](https://github.com/chimurai/http-proxy-middleware)
+
+## Nginx 反向代理
+
+实现原理类似于Node中间件代理，需要你搭建一个中转nginx服务器，用于转发请求。
+
+使用nginx反向代理实现跨域，是最简单的跨域方式。只需要修改nginx的配置即可解决跨域问题，支持所有浏览器，支持session，不需要修改任何代码，并且不会影响服务器性能。
+
+实现思路：通过nginx配置一个代理服务器（域名与domain1相同，端口不同）做跳板机，反向代理访问domain2接口，并且可以顺便修改cookie中domain信息，方便当前域cookie写入，实现跨域登录。
+
+## JSONP
+
+jsonp是客户端与服务器跨源通信的常用方法。最大特点是简单适用，老式服务器全部支持，服务器改造非常小。
+
+但是jsonp仅支持get方法，而且不安全可能会遭受XSS攻击。
+
+### 基本原理
+
+利用`<script>`标签没有跨域限制这个特点，网页可以得到从其他来源动态产生的 JSON 数据。JSONP请求一定需要对方的服务器做支持才可以。
+
+### 原生JS实现
+
+```javascript
+<script>
+var script = document.createElement('script');
+script.type = 'text/javascript';
+
+// 传参一个回调函数名给后端，方便后端返回时执行这个在前端定义的回调函数
+script.src = 'http://www.domain2.com:8080/login?user=admin&callback=handleCallback';
+document.head.appendChild(script);
+
+// 回调执行函数
+function handleCallback(res) {
+    alert(JSON.stringify(res));
+}
+</script>
+```
+
+### Vue axios 实现
+
+```javascript
+this.$http = axios;
+this.$http.jsonp('http://www.domain2.com:8080/login', {
+    params: {},
+    jsonp: 'handleCallback'
+}).then((res) => {
+    console.log(res); 
+})
+```
+
+## 总结
+
+- CORS支持所有类型的HTTP请求，是跨域HTTP请求的根本方案
+- 不管是Node中间件代理还是Nginx反向代理，主要是通过同源策略对服务器不加限制
+- JSONP只支持GET请求，JSONP的优势在于支持老式服务器，以及向不支持CORS的网站请求数据
+- 日常工作上，常用跨域方案为CORS和Nginx反向代理
