--- a/source/_posts/分析网页资源如何阻塞浏览器加载.md
+++ b/source/_posts/分析网页资源如何阻塞浏览器加载.md
@@ -82,8 +82,8 @@ cover: https://cdn.jsdelivr.net/gh/L1atte/PicGo/img/taylor3.jpg
 
 可以看到如下结果：
 
-1. 当 `bootstrap.css` 还没加载完成的时候，页面出于空白状态，但是 `DOM` 中出现 `h1` 标签，**<u>说明 CSS 不会阻塞 DOM 解析</u>**
-2. 页面直到 `bootstrap.css` 加载完成才出现 h1 的内容，**<u>说明 CSS 会阻塞 DOM 的渲染</u>**
+1. 当 `bootstrap.css` 还没加载完成的时候，页面出于空白状态，但是 `DOM` 中出现 `h1` 标签，**说明 CSS 不会阻塞 DOM 解析**
+2. 页面直到 `bootstrap.css` 加载完成才出现 h1 的内容，**说明 CSS 会阻塞 DOM 的渲染**
 
 为什么是这样呢。联想一下网页渲染的过程就知道了。浏览器首先解析 `html` 生成 `DOM` 树，解析 `CSS` 生成 `CSSOM` 树，然后将 `DOM` 树和 `CSSOM` 树进行合成生成渲染树，通过渲染树进行 `style`(样式计算)、`layout`(布局)、`paint`(绘制)，最终把页面渲染出来
 
@@ -118,7 +118,7 @@ cover: https://cdn.jsdelivr.net/gh/L1atte/PicGo/img/taylor3.jpg
 </html>
 ```
 
-刷新浏览器的时候可以发现，在 `bootstrap.css`文件加载完之后控制台打印 `script`，**<u>说明 CSS 会阻塞 JS 的执行</u>**
+刷新浏览器的时候可以发现，在 `bootstrap.css`文件加载完之后控制台打印 `script`，**说明 CSS 会阻塞 JS 的执行**
 
 ## JS 会阻塞渲染吗
 
@@ -144,7 +144,7 @@ cover: https://cdn.jsdelivr.net/gh/L1atte/PicGo/img/taylor3.jpg
 </html>
 ```
 
-当我们刷新浏览器的时候，页面一直没有加载出 `h1` 标签（白屏状态），直到5s后，显示 `h1` 标签，`DOM` 才渲染完成，同时打印 `DOMContentLoaded`，**<u>这说明 `JS` 的执行会阻塞 `DOM` 的解析</u>**
+当我们刷新浏览器的时候，页面一直没有加载出 `h1` 标签（白屏状态），直到5s后，显示 `h1` 标签，`DOM` 才渲染完成，同时打印 `DOMContentLoaded`，**这说明 `JS` 的执行会阻塞 `DOM` 的解析**
 
 
 
@@ -170,7 +170,7 @@ cover: https://cdn.jsdelivr.net/gh/L1atte/PicGo/img/taylor3.jpg
 </html>
 ```
 
-刷新页面的时候，可以看到在 `vue.js` 文件下载完成后，显示 `h1` 标签和打印 `DOMContentLoaded`，**<u>这说明 JS 的加载会阻塞 DOM 的解析</u>**
+刷新页面的时候，可以看到在 `vue.js` 文件下载完成后，显示 `h1` 标签和打印 `DOMContentLoaded`，**这说明 JS 的加载会阻塞 DOM 的解析**
 
 可以得出结论，浏览器解析 `html` 遇到 `script` 标签的时候会发生：
 
@@ -268,7 +268,7 @@ cover: https://cdn.jsdelivr.net/gh/L1atte/PicGo/img/taylor3.jpg
 
 ## `DOMContentLoaded` 的执行时机到底在什么时候
 
-其实还是归根到定义上，**`DOMContentLoaded` 是在 `DOM` 完全加载以及解析后执行**
+其实还是归根到定义上，**DOMContentLoaded 是在 `DOM` 完全加载以及解析后执行**
 
 联系我们前面的结论：
 
