--- a/source/_posts/分析网页资源如何阻塞浏览器加载.md
+++ b/source/_posts/分析网页资源如何阻塞浏览器加载.md
@@ -16,12 +16,11 @@ cover: https://cdn.jsdelivr.net/gh/L1atte/PicGo/img/taylor3.jpg
 - CSS 会阻塞 `DOM` 渲染，但不会阻塞 `DOM` 解析
 - JS 的加载、解析、执行会阻塞 `DOM` 的解析
 - CSS 会阻塞 JS 执行，从而 JS 阻塞`DOM` 解析
-- `defer`和 `async`是什么，有什么区别
-- 阻塞是怎么和 DOMContentLoaded 与 onload 扯上关系的？
 - `DOMContentLoaded` 是在 `DOM` 完全加载以及解析后执行
 - `onload` 是当页面所有资源（包括 `CSS`、`JS`、图片、字体、视频等）都加载完成才触发
+- `defer` 是“渲染完执行”， `async`是“下载完执行”
 
-## 问题1：图片会造成阻塞吗？
+## 问题 1：图片会造成阻塞吗？
 
 来看以下代码
 
@@ -58,7 +57,7 @@ cover: https://cdn.jsdelivr.net/gh/L1atte/PicGo/img/taylor3.jpg
 
 视频、字体和图片其实是一样的，也不会阻塞 `DOM` 的加载和渲染。
 
-## 问题2：CSS 加载会阻塞渲染吗
+## 问题 2：CSS 加载会阻塞渲染吗
 
 同样模拟慢速网络环境，来看以下代码
 
@@ -87,13 +86,11 @@ cover: https://cdn.jsdelivr.net/gh/L1atte/PicGo/img/taylor3.jpg
 
 为什么是这样呢。联想一下网页渲染的过程就知道了。浏览器首先解析 `html` 生成 `DOM` 树，解析 `CSS` 生成 `CSSOM` 树，然后将 `DOM` 树和 `CSSOM` 树进行合成生成渲染树，通过渲染树进行 `style`(样式计算)、`layout`(布局)、`paint`(绘制)，最终把页面渲染出来
 
-
-
 ![网页渲染过程](https://cdn.jsdelivr.net/gh/L1atte/PicGo/img/网页渲染过程.png)
 
 所以说解析 `DOM` 和解析 `CSS` 是并行执行的，既然如何，他们的解析过程就不会相互影响了，这和结论一相符；同时渲染页面实在得到 `CSSOM` 树之后进行的，这和结论二相符
 
-## 问题3：CSS 会阻塞 JS 执行吗
+## 问题 3：CSS 会阻塞 JS 执行吗
 
 模拟慢速网络环境，来看以下代码
 
@@ -144,9 +141,7 @@ cover: https://cdn.jsdelivr.net/gh/L1atte/PicGo/img/taylor3.jpg
 </html>
 ```
 
-当我们刷新浏览器的时候，页面一直没有加载出 `h1` 标签（白屏状态），直到5s后，显示 `h1` 标签，`DOM` 才渲染完成，同时打印 `DOMContentLoaded`，**这说明 `JS` 的执行会阻塞 `DOM` 的解析**
-
-
+当我们刷新浏览器的时候，页面一直没有加载出 `h1` 标签（白屏状态），直到 5s 后，显示 `h1` 标签，`DOM` 才渲染完成，同时打印 `DOMContentLoaded`，**这说明 `JS` 的执行会阻塞 `DOM` 的解析**
 
 我们再来验证下 JS 的加载是否会阻塞渲染
 
@@ -192,7 +187,7 @@ cover: https://cdn.jsdelivr.net/gh/L1atte/PicGo/img/taylor3.jpg
 
 那么，他们两者的区别是什么呢，来看一张经典的图
 
-![](https://cdn.jsdelivr.net/gh/L1atte/PicGo/img/defer async.png)
+![](https://cdn.jsdelivr.net/gh/L1atte/PicGo/img/defer&async.png)
 
 `defer` 特点
 
@@ -210,7 +205,7 @@ cover: https://cdn.jsdelivr.net/gh/L1atte/PicGo/img/taylor3.jpg
 
 在浏览器加载资源过程中涉及到两个事件，分别是 `DOMContentLoaded` 和 `onload` ，那么它们有什么区别呢
 
-- `DOMContentLoaded`： 浏览器已经完全加载了HTML，即 `DOM` 完全加载以及解析。但此时外部资源比如样式和脚本可能还没加载完成，并且该事件需要绑定到 `document` 对象上
+- `DOMContentLoaded`： 浏览器已经完全加载了 HTML，即 `DOM` 完全加载以及解析。但此时外部资源比如样式和脚本可能还没加载完成，并且该事件需要绑定到 `document` 对象上
 - onload：当页面所有资源（包括 `CSS`、`JS`、图片、字体、视频等）都加载完成才触发，而且它是绑定到 `window` 对象上
 
 ## 当 `DOMContentLoaded` 遇上 JS
@@ -219,9 +214,9 @@ cover: https://cdn.jsdelivr.net/gh/L1atte/PicGo/img/taylor3.jpg
 
 ```html
 <script>
-    document.addEventListener('DOMContentLoaded', () => {
-        console.log('DOMContentLoaded')
-    })
+	document.addEventListener("DOMContentLoaded", () => {
+		console.log("DOMContentLoaded")
+	})
 </script>
 <h1>我是 h1 标签</h1>
 <script src="https://cdn.bootcss.com/jquery/2.1.4/jquery.min.js"></script>
@@ -236,18 +231,21 @@ cover: https://cdn.jsdelivr.net/gh/L1atte/PicGo/img/taylor3.jpg
 ```html
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8"/>
-    <script>
-        document.addEventListener('DOMContentLoaded', () => {
-        console.log('DOMContentLoaded')
-    })
-    </script>
-    <link href="https://cdn.bootcss.com/bootstrap/4.0.0-alpha.6/css/bootstrap.css" rel="stylesheet"/>
-</head>
-<body>
-    <h1>我是 h1 标签</h1>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<script>
+			document.addEventListener("DOMContentLoaded", () => {
+				console.log("DOMContentLoaded")
+			})
+		</script>
+		<link
+			href="https://cdn.bootcss.com/bootstrap/4.0.0-alpha.6/css/bootstrap.css"
+			rel="stylesheet"
+		/>
+	</head>
+	<body>
+		<h1>我是 h1 标签</h1>
+	</body>
 </html>
 ```
 
@@ -278,12 +276,10 @@ cover: https://cdn.jsdelivr.net/gh/L1atte/PicGo/img/taylor3.jpg
 
 所以，现在是不是一目了然啦！
 
-
-
 ## 参考文章
 
 - [探究网页资源究竟是如何阻塞浏览器加载的](https://bubuzou.com/2020/12/26/browser-block/)
 - [关于 JS 与 CSS 是否阻塞 DOM 的渲染和解析](https://juejin.cn/post/6973949865130885157)
 - [JS CSS 如何阻塞页面渲染](https://juejin.cn/post/7063787988039237639)
 - [深入浅出浏览器渲染原理](https://blog.fundebug.com/2019/01/03/understand-browser-rendering/)
-- [defer和async的区别](https://segmentfault.com/q/1010000000640869)
+- [defer 和 async 的区别](https://segmentfault.com/q/1010000000640869)
