--- a/source/_posts/分析网页资源如何阻塞浏览器加载.md
+++ b/source/_posts/分析网页资源如何阻塞浏览器加载.md
@@ -6,6 +6,7 @@ tags: 浏览器
 categories: 浏览器
 top_img: https://cdn.jsdelivr.net/gh/L1atte/PicGo/img/taylor3.jpg
 cover: https://cdn.jsdelivr.net/gh/L1atte/PicGo/img/taylor3.jpg
+description: ' '
 ---
 
 # 分析网页资源如何阻塞浏览器加载
