--- a/source/_posts/异步任务的并行遍历和串行遍历.md
+++ b/source/_posts/异步任务的并行遍历和串行遍历.md
@@ -6,6 +6,7 @@ tags: JavaScript
 categories: JavaScript
 top_img: https://cdn.jsdelivr.net/gh/L1atte/PicGo/img/蝴蝶忍5.jpg
 cover: https://cdn.jsdelivr.net/gh/L1atte/PicGo/img/蝴蝶忍5.jpg
+description: ' '
 ---
 # 异步任务在遍历中的并发执行和串行执行
 
