--- a/source/_posts/扁平化数组与树形结构的互相转换.md
+++ b/source/_posts/扁平化数组与树形结构的互相转换.md
@@ -6,6 +6,7 @@ tags: 算法
 categories: 算法
 top_img: https://cdn.jsdelivr.net/gh/L1atte/PicGo/img/香奈乎2.png
 cover: https://cdn.jsdelivr.net/gh/L1atte/PicGo/img/香奈乎2.png
+description: ' '
 ---
 # 扁平化数组与树形结构的互相转换
 
