--- a/source/_posts/跨域及其解决方案.md
+++ b/source/_posts/跨域及其解决方案.md
@@ -6,6 +6,7 @@ tags: 浏览器
 categories: 浏览器
 top_img: https://cdn.jsdelivr.net/gh/L1atte/PicGo/img/香奈乎4.jpg
 cover: https://cdn.jsdelivr.net/gh/L1atte/PicGo/img/香奈乎4.jpg
+description: ' '
 ---
 
 # 跨域
