--- a/source/_posts/原型链和继承的本质是链表.md
+++ b/source/_posts/原型链和继承的本质是链表.md
@@ -6,6 +6,7 @@ tags: JavaScript
 categories: JavaScript
 top_img: https://cdn.jsdelivr.net/gh/L1atte/PicGo/img/taylor4.jpg
 cover: https://cdn.jsdelivr.net/gh/L1atte/PicGo/img/taylor4.jpg
+description: ' '
 ---
 
 # 原型链和继承的本质是链表
