将全局 tab 缩进替换为空格，优化网页展示

--- a/source/_posts/扁平化数组与树形结构的互相转换.md
+++ b/source/_posts/扁平化数组与树形结构的互相转换.md
@@ -12,19 +12,19 @@ description: ' '
 
 ## 写在前面
 
-​	今天在做项目的时候，遇到了需要将扁平化数组转换成树形结构的问题。首先第一个想到的是用递归去处理，但是在实际应用的时候，一旦数组长度比较大的时候，性能十分不理想（时间复杂度为0(n^2)，能理想就怪了）。后面在查阅资料的时候，发现有更优解，特此记录下来。
+​  今天在做项目的时候，遇到了需要将扁平化数组转换成树形结构的问题。首先第一个想到的是用递归去处理，但是在实际应用的时候，一旦数组长度比较大的时候，性能十分不理想（时间复杂度为0(n^2)，能理想就怪了）。后面在查阅资料的时候，发现有更优解，特此记录下来。
 
-​	先看一下数据：
+​  先看一下数据：
 
 ### 扁平化数组：
 
 ```javascript
 let arr = [
-	{ id: 5, name: "5", pid: 4 },
-	{ id: 1, name: "1", pid: 0 },
-	{ id: 2, name: "2", pid: 1 },
-	{ id: 3, name: "3", pid: 1 },
-	{ id: 4, name: "4", pid: 3 },
+  { id: 5, name: "5", pid: 4 },
+  { id: 1, name: "1", pid: 0 },
+  { id: 2, name: "2", pid: 1 },
+  { id: 3, name: "3", pid: 1 },
+  { id: 4, name: "4", pid: 3 },
 ];
 ```
 
@@ -32,39 +32,33 @@ let arr = [
 
 ```javascript
 let tree = [
-    {
-        "id": 1,
-        "name": "1",
-        "pid": 0,
-        "children": [
-            {
-                "id": 2,
-                "name": "2",
-                "pid": 1,
-                "children": []
-            },
-            {
-                "id": 3,
-                "name": "3",
-                "pid": 1,
-                "children": [
-                   {
-                     "id": 4,
-                     "name": "4",
-                     "pid": 3,
-                     "children": [
-                         "id": 5,
-                         "name": "5",
-                         "pid": 4,
-                         "children": []
-                     ]
-                   }
-                ]
-            }
-        ]
-    }
-]
-
+  {
+    id: 1,
+    name: 1,
+    pid: 0,
+    children: [
+      {
+        id: 2,
+        name: 2,
+        pid: 1,
+        children: [],
+      },
+      {
+        id: 3,
+        name: 3,
+        pid: 1,
+        children: [
+          {
+            id: 4,
+            name: 4,
+            pid: 3,
+            children: [{ id: 5, name: 5, pid: 4, children: [] }],
+          },
+        ],
+      },
+    ],
+  },
+];
 ```
 
 
@@ -110,34 +104,34 @@ function array2tree(items,rootId) {
  * @return {*}
  */
 function array2tree(items, rootId) {
-	const result = []; // 存放结果集
-	const map = {}; // 暂存数组以id为key的映射关系
+  const result = []; // 存放结果集
+  const map = {}; // 暂存数组以id为key的映射关系
 
-	// 先转成map存储
-	for (const item of items) {
-		map[item.id] = { ...item, children: [] };
-	}
+  // 先转成map存储
+  for (const item of items) {
+    map[item.id] = { ...item, children: [] };
+  }
 
-	for (const item of items) {
-		const id = item.id;
-		const pid = item.pid;
-		const treeItem = map[id];
-		if (pid === rootId) {
-			// 根节点
-			result.push(treeItem);
-		} else {
-			// 非根节点
-			if (!map[pid]) {
-				// 如果父节点不存在，则初始化父节点(处理第一个节点不是根节点的情形)
-				map[pid] = {
-					children: [],
-				};
-			}
-			// 将节点push到对应父节点下
-			map[pid].children.push(treeItem);
-		}
-	}
-	return result;
+  for (const item of items) {
+    const id = item.id;
+    const pid = item.pid;
+    const treeItem = map[id];
+    if (pid === rootId) {
+      // 根节点
+      result.push(treeItem);
+    } else {
+      // 非根节点
+      if (!map[pid]) {
+        // 如果父节点不存在，则初始化父节点(处理第一个节点不是根节点的情形)
+        map[pid] = {
+          children: [],
+        };
+      }
+      // 将节点push到对应父节点下
+      map[pid].children.push(treeItem);
+    }
+  }
+  return result;
 }
 ```
 
@@ -157,37 +151,37 @@ function array2tree(items, rootId) {
  * @return {*}
  */
 function array2tree(items, rootId) {
-	const res = []; // 存放结果集
-	const map = {}; //
-	for (const item of items) {
-		const id = item.id;
-		const pid = item.pid;
+  const res = []; // 存放结果集
+  const map = {}; //
+  for (const item of items) {
+    const id = item.id;
+    const pid = item.pid;
 
-		if (!map[id]) {
-			map[id] = {
-				children: [],
-			};
-		}
-		map[id] = {
-			...item,
-			children: map[id].children,
-		};
-		// 不可以像之前一样写成map[id] = {...item, children: [] }，因为节点有可能在找不到parent的时候存入map中
+    if (!map[id]) {
+      map[id] = {
+        children: [],
+      };
+    }
+    map[id] = {
+      ...item,
+      children: map[id].children,
+    };
+    // 不可以像之前一样写成map[id] = {...item, children: [] }，因为节点有可能在找不到parent的时候存入map中
 
-		const treeItem = map[id];
+    const treeItem = map[id];
 
-		if (pid === rootId) {
-			res.push(treeItem);
-		} else {
-			if (!map[pid]) {
-				map[pid] = {
-					children: [],
-				};
-			}
-			map[pid].children.push(treeItem);
-		}
-	}
-	return res;
+    if (pid === rootId) {
+      res.push(treeItem);
+    } else {
+      if (!map[pid]) {
+        map[pid] = {
+          children: [],
+        };
+      }
+      map[pid].children.push(treeItem);
+    }
+  }
+  return res;
 }
 ```
 
@@ -208,17 +202,17 @@ function array2tree(items, rootId) {
  * @return {*}
  */
 function tree2arr(items) {
-	let res = []; // 存放结果集
+  let res = []; // 存放结果集
 
-	items.forEach((item) => {
+  items.forEach((item) => {
     // children为字节点数组， node存放节点数据
-		const { children, ...node } = item;
-		res.push(node);
-		if (children && children.length) {
-			res = res.concat(tree2arr(children));
-		}
-	});
-	return res;
+    const { children, ...node } = item;
+    res.push(node);
+    if (children && children.length) {
+      res = res.concat(tree2arr(children));
+    }
+  });
+  return res;
 }
 ```
 
