更新 DOMContentLoaded 描述，并添加引用链接

--- a/source/_posts/分析网页资源如何阻塞浏览器加载.md
+++ b/source/_posts/分析网页资源如何阻塞浏览器加载.md
@@ -4,8 +4,6 @@ date: 2022/11/17
 updated: 2022/11/17
 tags: 浏览器
 categories: 浏览器
-top_img: https://cdn.jsdelivr.net/gh/L1atte/PicGo/img/taylor3.jpg
-cover: https://cdn.jsdelivr.net/gh/L1atte/PicGo/img/taylor3.jpg
 description: ' '
 ---
 
@@ -17,7 +15,7 @@ description: ' '
 - CSS 会阻塞 `DOM` 渲染，但不会阻塞 `DOM` 解析
 - JS 的加载、解析、执行会阻塞 `DOM` 的解析
 - CSS 会阻塞 JS 执行，从而 JS 阻塞`DOM` 解析
-- `DOMContentLoaded` 是在 `DOM` 完全加载以及解析后执行
+- `DOMContentLoaded` 是在 `DOM` 完全加载以及解析，并且所有`defer-script` (即`<script defer src="…">` and `<script type="module">`) 下载并执行后触发
 - `onload` 是当页面所有资源（包括 `CSS`、`JS`、图片、字体、视频等）都加载完成才触发
 - `defer` 是“渲染完执行”， `async`是“下载完执行”
 
@@ -206,8 +204,16 @@ description: ' '
 
 在浏览器加载资源过程中涉及到两个事件，分别是 `DOMContentLoaded` 和 `onload` ，那么它们有什么区别呢
 
-- `DOMContentLoaded`： 浏览器已经完全加载了 HTML，即 `DOM` 完全加载以及解析。但此时外部资源比如样式和脚本可能还没加载完成，并且该事件需要绑定到 `document` 对象上
-- onload：当页面所有资源（包括 `CSS`、`JS`、图片、字体、视频等）都加载完成才触发，而且它是绑定到 `window` 对象上
+> [DOMContentLoaded](https://developer.mozilla.org/en-US/docs/Web/API/Window/DOMContentLoaded_event)： The `DOMContentLoaded` event fires when the HTML document has been completely parsed, and all deferred scripts (`<script defer src="…">` and `<script type="module">`) have downloaded and executed. It doesn't wait for other things like images, subframes, and async scripts to finish loading.
+>
+> 参考：https://developer.mozilla.org/en-US/docs/Web/API/Window/DOMContentLoaded_event
+
+> [onload](https://developer.mozilla.org/zh-CN/docs/Web/API/Window/load_event)：当页面所有资源（包括 `CSS`、`JS`、图片、字体、视频等）都加载完成才触发，而且它是绑定到 `window` 对象上
+> 参考：https://developer.mozilla.org/zh-CN/docs/Web/API/Window/load_event
+
+
+
+
 
 ## 当 `DOMContentLoaded` 遇上 JS
 
@@ -267,7 +273,7 @@ description: ' '
 
 ## `DOMContentLoaded` 的执行时机到底在什么时候
 
-其实还是归根到定义上，**DOMContentLoaded 是在 `DOM` 完全加载以及解析后执行**
+其实还是归根到定义上，**`DOMContentLoaded` 是在 `DOM` 完全加载以及解析，并且所有`defer-script` (即`<script defer src="…">` and `<script type="module">`) 下载并执行后触发**
 
 联系我们前面的结论：
 
